--- a/T5/flexbox2/index.html
+++ b/T5/flexbox2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -37,12 +37,12 @@
             eget purus in interdum. Cum sociis natoque penatibus et magnis dis
             parturient montes, nascetur ridiculus mus.</p>
     </article>
-    <other>
+    <aside>
         <h2>Other things</h2>
         <p>Nam vulputate diam nec tempor bibendum. Donec luctus
             augue eget malesuada ultrices. Phasellus turpis est, posuere sit amet
             dapibus ut, facilisis sed est.</p>
-    </other>
+    </aside>
 </div>
 <div class="container">
     <div class="box-content">
